fix: align repost button on Article page on mobile

--- a/src/app/components/event/repost-button/repost-button.component.scss
+++ b/src/app/components/event/repost-button/repost-button.component.scss
@@ -1,2 +1,6 @@
 // Component-specific styles for reply-button
 // Global styles should be used for common styling patterns
+
+:host {
+  text-align: center; // to look good in mobile view
+}
